# stockforensics

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  requirements.txt  streamlit_app.py
.github/workflows/: deploy-hf.yml  python-ci.yml
.streamlit/: config.toml
data/universe/: sp500.csv
docs/: MIGRATION_TO_STREAMLIT.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  analysisCache.ts  api.ts  styles.css  themes.ts  types.ts
frontend/src/components/: Breakdown.tsx  CompanyDetail.tsx  CompositeCard.tsx  Leaderboard.tsx  RadarPanel.tsx  ScoreCard.tsx  Synthesis.tsx  ThinkingStream.tsx  WeightEditor.tsx
python/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
python/app/: __init__.py  main.py
python/app/adapters/: fixtures.py  llm_client.py  market_client.py  protocols.py  sec_client.py  universe_client.py  vector_client.py
python/app/agent/: contract.py  research.py  synthesize.py
python/app/core/: api.py  clients.py  config.py  logging.py  scheduler.py
python/app/db/: clear.py  engine.py  migrate.py  models.py  repository.py  seed.py
python/app/pipeline/: analyze.py  graph.py  market_hours.py  runner.py  sse.py  universe.py
python/app/rag/: chunk.py
python/app/transform/: models.py  ratios.py  scoring_rules.py  weighted_scorer.py  xbrl_map.py
python/data/universe/: sp500.csv
python/tests/: conftest.py  test_graph.py  test_sse_contract.py
python/tests/smoke/: test_live_adapters.py
python/tests/unit/: test_api.py  test_clients.py  test_config_and_adapters.py  test_pipeline.py  test_ratios.py  test_scoring_rules.py  test_weighted_scorer.py  test_xbrl_map.py
