[project]
name = "stockforensics"
version = "0.1.0"
description = "StockForensics: deterministic value-investing analysis pipeline (Python backend)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "httpx>=0.27",
    "pandas>=2.2",
    "numpy>=1.26",
    "yfinance>=0.2.40",
    "lxml>=5.2",
    "sqlalchemy>=2.0",
    "apscheduler>=3.10",
    "tenacity>=8.4",
    "langgraph>=0.2",
    "langchain-core>=0.2",
    "google-genai>=0.3",
    "pinecone>=5.0",
    "streamlit>=1.40",
    "plotly>=5.20",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "freezegun>=1.5",
    "ruff>=0.5.0",
    "black>=24.4",
    "mypy>=1.10",
    "bandit>=1.7",
    "pre-commit>=3.7",
    "pandas-stubs>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: live external calls; non-gating; run via 'make smoke'",
]
addopts = "-m 'not smoke' --cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
branch = true
omit = [
    "app/main.py",
    "app/core/scheduler.py",
    "app/core/api.py",
    "*/__main__.py",
    # live network adapters, exercised by `make smoke`, not the offline gate (Q6)
    "app/adapters/sec_client.py",
    "app/adapters/market_client.py",
    "app/adapters/universe_client.py",
    "app/adapters/llm_client.py",
    "app/adapters/vector_client.py",
    "app/pipeline/universe.py",
    "app/pipeline/analyze.py",
    "app/pipeline/market_hours.py",
    "app/agent/synthesize.py",
    "app/agent/contract.py",
    "app/rag/chunk.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.bandit]
exclude_dirs = ["tests"]
